Add ZGC garbage collector